# JGit bzlmod definition (library mode; dependency resolution owned by root module)
module(name = "jgit")

bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "com_googlesource_gerrit_bazlets",
    commit = "f9c119e45d9a241bee720b7fbd6c7fdbc952da5f",
    remote = "https://gerrit.googlesource.com/bazlets",
)

# --------------------------------------------------------------------
# Shared Maven dependency universe (do NOT call maven.install() here)
# --------------------------------------------------------------------
# JGit is designed to be consumed primarily as a library. In this mode,
# it must rely on a Maven repository defined by the *root module* rather
# than instantiating its own maven.install().
#
# Creating a separate Maven universe here would allow JGit to compile
# against dependency versions that differ from those used by the
# consuming application at runtime, which is unsafe and can lead to
# linkage errors (e.g. NoSuchMethodError, ClassNotFoundException).
#
# The root module (for example, a consuming application or the
# tools/standalone wrapper module) is responsible for defining the
# repository referenced below.
# --------------------------------------------------------------------
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
use_repo(maven, "external_deps") # must be defined by the root module

