module(name = "jgit")

bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rbe_autoconfig")
git_override(
    module_name = "rbe_autoconfig",
    commit = "71f39817c028949bd6d25f1806502bcd33028d14",
    remote = "https://github.com/davido/rbe_autoconfig.git",
)

register_toolchains("//tools:error_prone_warnings_toolchain_java17_definition")

register_toolchains("//tools:error_prone_warnings_toolchain_java21_definition")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "com_googlesource_gerrit_bazlets",
    commit = "f9c119e45d9a241bee720b7fbd6c7fdbc952da5f",
    remote = "https://gerrit.googlesource.com/bazlets",
)

BOUNCYCASTLE_VERSION = "1.83"

BYTE_BUDDY_VERSION = "1.18.5"

JETTY_VERSION = "12.1.6"

JMH_VERSION = "1.37"

JNA_VERSION = "5.18.1"

SLF4J_VERSION = "2.0.17"

SSHD_VERSION = "2.17.1"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "external_deps",
    artifacts = [
        "args4j:args4j:2.37",
        "com.google.code.gson:gson:2.13.2",
        "com.google.errorprone:error_prone_type_annotations:2.46.0",
        "com.googlecode.javaewah:JavaEWAH:1.2.3",
        "com.jcraft:jsch:0.1.55",
        "com.jcraft:jzlib:1.1.3",
        "commons-codec:commons-codec:1.21.0",
        "commons-io:commons-io:2.21.0",
        "commons-logging:commons-logging:1.3.5",
        "jakarta.servlet:jakarta.servlet-api:6.1.0",
        "junit:junit:4.13.2",
        "net.bytebuddy:byte-buddy-agent:" + BYTE_BUDDY_VERSION,
        "net.bytebuddy:byte-buddy:" + BYTE_BUDDY_VERSION,
        "net.java.dev.jna:jna-platform:" + JNA_VERSION,
        "net.java.dev.jna:jna:" + JNA_VERSION,
        "net.sf.jopt-simple:jopt-simple:5.0.4",
        "org.apache.commons:commons-compress:1.28.0",
        "org.apache.commons:commons-lang3:3.20.0",
        "org.apache.commons:commons-math3:3.6.1",
        "org.apache.httpcomponents:httpclient:4.5.14",
        "org.apache.httpcomponents:httpcore:4.4.16",
        "org.apache.sshd:sshd-osgi:" + SSHD_VERSION,
        "org.apache.sshd:sshd-sftp:" + SSHD_VERSION,
        "org.assertj:assertj-core:3.27.7",
        "org.bouncycastle:bcpg-jdk18on:" + BOUNCYCASTLE_VERSION,
        "org.bouncycastle:bcpkix-jdk18on:" + BOUNCYCASTLE_VERSION,
        "org.bouncycastle:bcprov-jdk18on:" + BOUNCYCASTLE_VERSION,
        "org.bouncycastle:bcutil-jdk18on:" + BOUNCYCASTLE_VERSION,
        "org.eclipse.jetty:jetty-http:" + JETTY_VERSION,
        "org.eclipse.jetty:jetty-io:" + JETTY_VERSION,
        "org.eclipse.jetty:jetty-security:" + JETTY_VERSION,
        "org.eclipse.jetty:jetty-server:" + JETTY_VERSION,
        "org.eclipse.jetty:jetty-session:" + JETTY_VERSION,
        "org.eclipse.jetty:jetty-util-ajax:" + JETTY_VERSION,
        "org.eclipse.jetty:jetty-util:" + JETTY_VERSION,
        "org.eclipse.jetty.ee10:jetty-ee10-servlet:" + JETTY_VERSION,
        "org.hamcrest:hamcrest:3.0",
        "org.mockito:mockito-core:5.21.0",
        "org.objenesis:objenesis:3.4",
        "org.openjdk.jmh:jmh-core:" + JMH_VERSION,
        "org.openjdk.jmh:jmh-generator-annprocess:" + JMH_VERSION,
        "org.slf4j:slf4j-api:" + SLF4J_VERSION,
        "org.slf4j:slf4j-simple:" + SLF4J_VERSION,
        "org.tukaani:xz:1.11",
    ],
    duplicate_version_warning = "warn",
    fail_on_missing_checksum = True,
    fetch_sources = True,
    known_contributing_modules = ["jgit"],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    strict_visibility = True,
)
use_repo(maven, "external_deps")
